# LMROS

./: README.md
esp32_fw/: Makefile  e.sh  partitions_s2_4mb.csv  sdkconfig.lilygot8  sdkconfig.mower_s2  sdkconfig.mower_s2.old  sdkconfig.mower_s2_16  sdkconfig.mower_s2_16mb  sdkconfig.mower_s2_4  sdkconfig.zumo
esp32_fw/components/: micro_ros_espidf_component.libmicroros.mk
esp32_fw/components/ota_server/: ota_server.c
esp32_fw/main/: CMakeLists.txt  Kconfig.projbuild  app_main.cpp  component.mk  console.cpp  console.h  gps.cpp  hwconfig.h  i2c_updater.cpp  i2chandler.cpp  i2chandler.h  ros2node.cpp  webui.cpp  wifi.cpp
esp32_fw/main/server/: root.html  test.css  test.js
esp32_fw/main/ulp/: adc.S
rtk/: .gitignore  ros2mower_m8n_5hz.conf
